# Comix

./: .pre-commit-config.yaml  install.py  pyproject.toml
src/: about.py  archive.py  bookmark.py  comicthumb.py  comix.py  comment.py  cursor.py  deprecated.py  edit.py  encoding.py  enhance.py  event.py  filechooser.py  filehandler.py  histogram.py  icons.py  image.py  labels.py  lens.py  library.py  librarybackend.py  main.py  mobiunpack.py  preferences.py  process.py  properties.py  recent.py  slideshow.py  status.py  thumbbar.py  thumbnail.py  thumbremover.py  ui.py
tests/: test_comix.py  test_main.py
